k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app: demo
spec:
  replicas: 4
  selector:
    matchLabels:
      app: demo
      tier: api
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: demo
        tier: api
    spec:
      containers:
        - name: api
          image: maniratnagupta/api-demo:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
    tier: api
  ports:
    - port: 80
      targetPort: 3000
