k8s/mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo
      tier: mysql
  template:
    metadata:
      labels:
        app: demo
        tier: mysql
    spec:
      volumes:
        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: mysql-pvc
        - name: init-sql
          configMap:
            name: mysql-initdb
      containers:
        - name: mysql
          image: mysql:8.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
            - name: init-sql
              mountPath: /docker-entrypoint-initdb.d
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: demo
spec:
  type: ClusterIP
  selector:
    app: demo
    tier: mysql
  ports:
    - port: 3306
      targetPort: 3306
